--- a/assests/css/hw.css
+++ b/assests/css/hw.css
@@ -93,6 +93,14 @@
 .text-bottom {
   text-align: center;
 }
+
+  img {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 500px;
+  }
+}
 .hero2 {
   height:600px;
   background-size:cover;
