--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -40,6 +40,12 @@
   section {
     padding:60px
   }
+  hero img {
+    height:200px;
+    background-size:cover;
+    background-position: center;
+    opacity: 50%;
+  }
   .hero {
     background-image:url("file:///Users/nicholechristianson/Desktop/demo-project/homework/02-css%20portfolio/assests/pictures/DSC08734.JPG");
     height:600px;
