header img changes

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -45,7 +45,8 @@
     background-size:cover;
     background-position: center;
     opacity: 50%;
-    width:100%
+    width:100%;
+    padding-bottom: 50px;
   }
   .hero {
     background-image:url("file:///Users/nicholechristianson/Desktop/demo-project/homework/02-css%20portfolio/assests/pictures/DSC08734.JPG");
